--- a/nicecss.scss
+++ b/nicecss.scss
@@ -1,6 +1,9 @@
-/*------------------------------------*\
-    $IMPORTS
-\*------------------------------------*/
+/* 
+------------------------------------------------
+IMPORTS
+------------------------------------------------
+*/
+
 
 @import "defaults";
 
@@ -21,3 +24,4 @@
 @import "objects/flag";
 @import "objects/tabdata";
 @import "objects/media";
+@import "objects/loader";
