--- a/base/_helpers.scss
+++ b/base/_helpers.scss
@@ -62,71 +62,56 @@ HELPERS
 
 
 	// MARGIN AND PADDINGS     -----------------------------
-	.push           	{ margin:       $base-spacing-unit!important; }
-	.push--top      	{ margin-top:   $base-spacing-unit!important; }
-	.push--right    	{ margin-right: $base-spacing-unit!important; }
-	.push--bottom   	{ margin-bottom:$base-spacing-unit!important; }
-	.push--left     	{ margin-left:  $base-spacing-unit!important; }
-	.push--ends     	{ margin-top:   $base-spacing-unit!important; margin-bottom:$base-spacing-unit!important; }
-	.push--sides    	{ margin-right: $base-spacing-unit!important; margin-left:  $base-spacing-unit!important; }
+	.m          { margin:       $base-spacing-unit!important; }
+	.mt      	{ margin-top:   $base-spacing-unit!important; }
+	.mr    		{ margin-right: $base-spacing-unit!important; }
+	.mb   		{ margin-bottom:$base-spacing-unit!important; }
+	.ml     	{ margin-left:  $base-spacing-unit!important; }
 
-	.push-half          	{ margin:       $half-spacing-unit!important; }
-	.push-half--top     	{ margin-top:   $half-spacing-unit!important; }
-	.push-half--right   	{ margin-right: $half-spacing-unit!important; }
-	.push-half--bottom 		{ margin-bottom:$half-spacing-unit!important; }
-	.push-half--left    	{ margin-left:  $half-spacing-unit!important; }
-	.push-half--ends    	{ margin-top:   $half-spacing-unit!important; margin-bottom:$half-spacing-unit!important; }
-	.push-half--sides   	{ margin-right: $half-spacing-unit!important; margin-left:  $half-spacing-unit!important; }
+	.m--half    { margin:       $half-spacing-unit!important; }
+	.mt--half   { margin-top:   $half-spacing-unit!important; }
+	.mr--half   { margin-right: $half-spacing-unit!important; }
+	.mb--half 	{ margin-bottom:$half-spacing-unit!important; }
+	.ml--half   { margin-left:  $half-spacing-unit!important; }
 
 
-	.push-double          	{ margin:       $double-spacing-unit!important; }
-	.push-double--top     	{ margin-top:   $double-spacing-unit!important; }
-	.push-double--right   	{ margin-right: $double-spacing-unit!important; }
-	.push-double--bottom  	{ margin-bottom:$double-spacing-unit!important; }
-	.push-double--left    	{ margin-left:  $double-spacing-unit!important; }
-	.push-double--ends    	{ margin-top:   $double-spacing-unit!important; margin-bottom:$double-spacing-unit!important; }
-	.push-double--sides   	{ margin-right: $double-spacing-unit!important; margin-left:  $double-spacing-unit!important; }
+	.m--2       { margin:       $double-spacing-unit!important; }
+	.mt--2     	{ margin-top:   $double-spacing-unit!important; }
+	.mr--2   	{ margin-right: $double-spacing-unit!important; }
+	.mb--2  	{ margin-bottom:$double-spacing-unit!important; }
+	.ml--2    	{ margin-left:  $double-spacing-unit!important; }
 
-	.flush          { margin:       0!important; }
-	.flush--top     { margin-top:   0!important; }
-	.flush--right   { margin-right: 0!important; }
-	.flush--bottom  { margin-bottom:0!important; }
-	.flush--left    { margin-left:  0!important; }
-	.flush--ends    { margin-top:   0!important; margin-bottom:0!important; }
-	.flush--sides   { margin-right: 0!important; margin-left:  0!important; }
+	.m--0       { margin:       0!important; }
+	.mt--0      { margin-top:   0!important; }
+	.mr--0   	{ margin-right: 0!important; }
+	.mb--0  	{ margin-bottom:0!important; }
+	.ml--0    	{ margin-left:  0!important; }
 
 
-	.soft           	{ padding:       $base-spacing-unit!important; }
-	.soft--top      	{ padding-top:   $base-spacing-unit!important; }
-	.soft--right    	{ padding-right: $base-spacing-unit!important; }
-	.soft--bottom   	{ padding-bottom:$base-spacing-unit!important; }
-	.soft--left     	{ padding-left:  $base-spacing-unit!important; }
-	.soft--ends     	{ padding-top:   $base-spacing-unit!important; padding-bottom:$base-spacing-unit!important; }
-	.soft--sides    	{ padding-right: $base-spacing-unit!important; padding-left:  $base-spacing-unit!important; }
+	.p          { padding:       $base-spacing-unit!important; }
+	.pt      	{ padding-top:   $base-spacing-unit!important; }
+	.pr    		{ padding-right: $base-spacing-unit!important; }
+	.pb   		{ padding-bottom:$base-spacing-unit!important; }
+	.pl     	{ padding-left:  $base-spacing-unit!important; }
 
-	.soft-half           	{ padding:       $half-spacing-unit!important; }
-	.soft-half--top      	{ padding-top:   $half-spacing-unit!important; }
-	.soft-half--right    	{ padding-right: $half-spacing-unit!important; }
-	.soft-half--bottom  	{ padding-bottom:$half-spacing-unit!important; }
-	.soft-half--left     	{ padding-left:  $half-spacing-unit!important; }
-	.soft-half--ends      	{ padding-top:   $half-spacing-unit!important; padding-bottom:$half-spacing-unit!important; }
-	.soft-half--sides    	{ padding-right: $half-spacing-unit!important; padding-left:  $half-spacing-unit!important; }
+	.p--half    { padding:       $half-spacing-unit!important; }
+	.pt--half   { padding-top:   $half-spacing-unit!important; }
+	.pr--half   { padding-right: $half-spacing-unit!important; }
+	.pb--half 	{ padding-bottom:$half-spacing-unit!important; }
+	.pl--half   { padding-left:  $half-spacing-unit!important; }
 
-	.soft-double           	{ padding:       $double-spacing-unit!important; }
-	.soft-double--top      	{ padding-top:   $double-spacing-unit!important; }
-	.soft-double--right     { padding-right: $double-spacing-unit!important; }
-	.soft-double--bottom  	{ padding-bottom:$double-spacing-unit!important; }
-	.soft-double--left     	{ padding-left:  $double-spacing-unit!important; }
-	.soft-double--ends     	{ padding-top:   $double-spacing-unit!important; padding-bottom:$double-spacing-unit!important; }
-	.soft-double--sides    	{ padding-right: $double-spacing-unit!important; padding-left:  $double-spacing-unit!important; }
 
-	.hard           	{ padding:       0!important; }
-	.hard--top      	{ padding-top:   0!important; }
-	.hard--right    	{ padding-right: 0!important; }
-	.hard--bottom   	{ padding-bottom:0!important; }
-	.hard--left     	{ padding-left:  0!important; }
-	.hard--ends     	{ padding-top:   0!important; padding-bottom:0!important; }
-	.hard--sides    	{ padding-right: 0!important; padding-left:  0!important; }
+	.p--2       { padding:       $double-spacing-unit!important; }
+	.pt--2     	{ padding-top:   $double-spacing-unit!important; }
+	.pr--2   	{ padding-right: $double-spacing-unit!important; }
+	.pb--2  	{ padding-bottom:$double-spacing-unit!important; }
+	.pl--2    	{ padding-left:  $double-spacing-unit!important; }
+
+	.p--0       { padding:       0!important; }
+	.pt--0      { padding-top:   0!important; }
+	.pr--0   	{ padding-right: 0!important; }
+	.pb--0  	{ padding-bottom:0!important; }
+	.pl--0    	{ padding-left:  0!important; }
 
 }
 
