Added placeholder mixin

--- a/base/_mixins.scss
+++ b/base/_mixins.scss
@@ -278,3 +278,18 @@ MIXINS
     clear: both
   }
 }
+
+@mixin placeholder($color) {
+  ::-webkit-input-placeholder {
+     color: $color;
+  }
+  :-moz-placeholder { /* Firefox 18- */
+     color: $color;  
+  }
+  ::-moz-placeholder {  /* Firefox 19+ */
+     color: $color;  
+  }
+  :-ms-input-placeholder {  
+     color: $color;  
+  }
+}
