--- a/_defaults.scss
+++ b/_defaults.scss
@@ -4,64 +4,106 @@ BASE
 ------------------------------------------------
 */
 
-// BASE METRICS --------------------------------
 $base-font-size:    16px!default;
 $base-line-height:  24px!default;
 
-// BASE FACES   --------------------------------
-$base-font-family:  sans-serif!default;
+$base-font-weight: 	400!default;
+$base-round:        4px!default;
 
-// BASE COLORS  --------------------------------
-$base-ui-color:     #ccc!default;
-$base-text-color:   #333!default;
-
+$base-spacing-unit: $base-line-height !default;
+$line-height-ratio: $base-line-height / $base-font-size !default;
 
 
 /* 
 ------------------------------------------------
-RESPONSIVE
+COLORS
 ------------------------------------------------
 */
 
-$breakpoints: (
-    'mobile' '(max-width: 480px)',
-    'tablet' '(min-width: 481px) and (max-width: 1023px)',
-    'desk' '(min-width: 1024px)'
+$colors: (
+	brand: red,
+	alt: blue,
+	bgcolor: white,
+	light: white,
+	text: (
+		base: #333,
+		dark: black,
+		light: #666
+	),
+	ui: (
+		base: #ccc,
+		dark: #666,
+		light: #DDD
+	) 
+)!default;
+
+/* 
+------------------------------------------------
+FACES
+------------------------------------------------
+*/
+
+$faces: (
+	brand: sans-serif,
+	alt: serif
 )!default;
 
 
 
 /* 
 ------------------------------------------------
-FONT SIZES
+BREAKPOINT
 ------------------------------------------------
 */
 
-$giga-size:         96px!default;
-$mega-size:         72px!default;
-$kilo-size:         48px!default;
+$breakpoint-default-feature:    max-width !default;
+$breakpoint-to-ems:             true !default;
 
-$h1-size:           36px!default; // .tam1
-$h2-size:           30px!default; // .tam2
-$h3-size:           24px!default; // .tam3
-$h4-size:           20px!default; // .tam4
-$h5-size:           16px!default; // .tam5
-$h6-size:           14px!default; // .tam6
 
-$milli-size:        12px!default;
-$micro-size:        10px!default;
-
+$breakpoints: (
+	mobile: 480px,
+	tablet: 800px
+)!default;
 
 
 /* 
 ------------------------------------------------
-BRAND
+TEXTS
 ------------------------------------------------
 */
 
-$brand-color:       #4a8ec2!default;
-$brand-face:        "Helvetica Neue", sans-serif!default;
-$brand-round:        4px!default;
+
+$text: (
+	pagetitle: (
+		size: 48px,
+		lineheight: 1.5,
+		color: getcolor(brand),
+		family: getface(brand),
+		weight: 700
+	),
+	sectiontitle: (
+		size: 36px,
+		color: getcolor(brand),
+		lineheight: 1.4,
+		family: getface(brand),
+		weight: 500
+	),
+	moduletitle: (
+		size: 22px,
+		lineheight: 1.3,
+		color: getcolor(alt),
+		family: getface(brand),
+		weight: 500
+	),
+	bodycopy: (
+		size: $base-font-size,
+		lineheight: 1.3,
+		color: getcolor(text, base),
+		family: getface(brand),
+		weight: 400
+	)
+)!default;
+
 
 
 /* 
@@ -76,14 +118,25 @@ $gutter:            30px!default;
 
 /* 
 ------------------------------------------------
-METRICS VARS
+SPACE
 ------------------------------------------------
 */
 
-$base-spacing-unit:     $base-line-height!default;
-$half-spacing-unit:     $base-spacing-unit / 2!default;
-$double-spacing-unit:   $base-spacing-unit * 2!default;
-$line-height-ratio:     $base-line-height / $base-font-size;
+
+$space: (
+	mb: (
+		prop: margin-bottom,
+		alias: (zero, normal, double, triple, quad),
+		values: (0, 1, 2, 3, 4),
+		responsive: (mobile, tablet)
+	),
+	p: (
+		prop: padding,
+		alias: (zero, normal, double, triple, quad),
+		values: (0, 1, 2, 3, 4),
+		responsive: (mobile, tablet)
+	)
+)!default;
 
 
 /* 
@@ -92,11 +145,13 @@ LOADER VARS
 ------------------------------------------------
 */
 
-$loader-center: 				true!default;
-$loader-dotsize: 				15px!default;
-$loader-dotcolor: 				#000!default;
-$loader-animation-duration: 	1.2s!default;
-$loader-animation-move: 		25px!default;
+$loader: (
+	iscenter: true,
+	dotsize: 15px,
+	dotcolor: #000,
+	animation-duration: 1.2s,
+	animation-move: 25px
+)!default;
 
 
 /* 
@@ -105,9 +160,10 @@ FRAMEWORK SETTINGS
 ------------------------------------------------
 */
 
-$use-oocss-helpers: true!default;
-$use-forms: true!default;
-$use-buttons: true!default;
-$use-lists: true!default;
-$use-headings: true!default;
-$use-loader: true!default;
+$use-helpers: 		true !default;
+$use-forms: 		true !default;
+$use-buttons: 		true !default;
+$use-lists: 		true !default;
+$use-texts: 		true !default;
+$use-loader: 		true !default;
+$use-dropmenu: 		true !default;
