--- a/base/_helpers.scss
+++ b/base/_helpers.scss
@@ -4,7 +4,7 @@ HELPERS
 ------------------------------------------------
 */
 
-@if $use-oocss-helpers {
+@if $use-helpers {
 
 	// FLOATS   ------------------------------------
 
@@ -62,77 +62,40 @@ HELPERS
 
 
 	// MARGIN AND PADDINGS     -----------------------------
-	.m          { margin:       $base-spacing-unit!important; }
-	.mt      	{ margin-top:   $base-spacing-unit!important; }
-	.mr    		{ margin-right: $base-spacing-unit!important; }
-	.mb   		{ margin-bottom:$base-spacing-unit!important; }
-	.ml     	{ margin-left:  $base-spacing-unit!important; }
-
-	.m--half    { margin:       $half-spacing-unit!important; }
-	.mt--half   { margin-top:   $half-spacing-unit!important; }
-	.mr--half   { margin-right: $half-spacing-unit!important; }
-	.mb--half 	{ margin-bottom:$half-spacing-unit!important; }
-	.ml--half   { margin-left:  $half-spacing-unit!important; }
-
-
-	.m--2       { margin:       $double-spacing-unit!important; }
-	.mt--2     	{ margin-top:   $double-spacing-unit!important; }
-	.mr--2   	{ margin-right: $double-spacing-unit!important; }
-	.mb--2  	{ margin-bottom:$double-spacing-unit!important; }
-	.ml--2    	{ margin-left:  $double-spacing-unit!important; }
-
-	.m--0       { margin:       0!important; }
-	.mt--0      { margin-top:   0!important; }
-	.mr--0   	{ margin-right: 0!important; }
-	.mb--0  	{ margin-bottom:0!important; }
-	.ml--0    	{ margin-left:  0!important; }
-
-
-	.p          { padding:       $base-spacing-unit!important; }
-	.pt      	{ padding-top:   $base-spacing-unit!important; }
-	.pr    		{ padding-right: $base-spacing-unit!important; }
-	.pb   		{ padding-bottom:$base-spacing-unit!important; }
-	.pl     	{ padding-left:  $base-spacing-unit!important; }
-
-	.p--half    { padding:       $half-spacing-unit!important; }
-	.pt--half   { padding-top:   $half-spacing-unit!important; }
-	.pr--half   { padding-right: $half-spacing-unit!important; }
-	.pb--half 	{ padding-bottom:$half-spacing-unit!important; }
-	.pl--half   { padding-left:  $half-spacing-unit!important; }
-
-
-	.p--2       { padding:       $double-spacing-unit!important; }
-	.pt--2     	{ padding-top:   $double-spacing-unit!important; }
-	.pr--2   	{ padding-right: $double-spacing-unit!important; }
-	.pb--2  	{ padding-bottom:$double-spacing-unit!important; }
-	.pl--2    	{ padding-left:  $double-spacing-unit!important; }
-
-	.p--0       { padding:       0!important; }
-	.pt--0      { padding-top:   0!important; }
-	.pr--0   	{ padding-right: 0!important; }
-	.pb--0  	{ padding-bottom:0!important; }
-	.pl--0    	{ padding-left:  0!important; }
-
-}
-
-// CLEARFIX     ---------------------------------------
-%clearfix,
-.clearfix {
-	&:after{
-	  content: "";
-	  display: table;
-	  clear: both
-	}
-}
-
-// RESPONSIVE VISIBLE CLASS    -----------------------------
-@each $breakpoint in $breakpoints {
-	$name: nth($breakpoint, 1);
-	.visible--#{$name} {
-		display: none;
-		@include respond-to($name) {
-			display: block;
+	@each $name, $data in $space {
+		$cont: 1;
+		@each $alias in map-get($data, alias) {
+			.#{$name}--#{$alias} {
+				@include rem-space(map-get($data, prop), nth(map-get($data, values), $cont));
+			}
+			$responsive: map-get($data, responsive);
+			@each $break in $responsive {
+				@include respond-to(#{$break}) {
+					.#{$break}-#{$name}--#{$alias} {
+						@include rem-space(map-get($data, prop), nth(map-get($data, values), $cont));
+					}	
+				}
+			}
+			$cont: $cont + 1;
 		}
 	}
-}
 
+	// CLEARFIX     ---------------------------------------
+	.clearfix {
+		@include clearfix;
+	}
+
+	// RESPONSIVE VISIBLE CLASS    -----------------------------
+
+	@each $name, $value in $breakpoints {
+		@include respond-to($name) {
+			.visible--#{$name} {
+				display: block;
+			}
+			.hide--#{$name} {
+				display: none;
+			}
+		}
+	}
+
+}
