--- a/base/_mixins.scss
+++ b/base/_mixins.scss
@@ -53,18 +53,6 @@ MIXINS
     text-overflow:ellipsis;
 }
 
-@mixin respond-to($media){
-  @each $breakpoint in $breakpoints{
-      $name: nth($breakpoint, 1);
-      $declaration: nth($breakpoint, 2);
-
-      @if $media == $name and $declaration{
-          @media only screen and #{$declaration}{
-              @content;
-          }
-      }
-  }
- }
 
 @mixin opacity ( $value: 0.5 ) {
   opacity: $value;
@@ -125,6 +113,10 @@ MIXINS
   -ms-transition: $args;
   -o-transition: $args;
   transition: $args;
+}
+
+@mixin effect($time) {
+  @include transition(all $time ease-in-out);
 }
 
 /* Example:
@@ -236,6 +228,14 @@ MIXINS
   }
 }
 
+@mixin circle($size, $bgcolor) {
+  display: inline-block;
+  width: $size;
+  height: $size;
+  @include border-radius(50%);
+  background-color: $bgcolor;
+}
+
 // Example: .box { @include inside-border(20px, blue, .6); }
 @mixin inside-border($values...) {
   $borderThickness: 2px !default;
@@ -293,3 +293,131 @@ MIXINS
      color: $color;  
   }
 }
+
+/// Based on Event wrapper
+/// @author Harry Roberts
+@mixin on-event($active: false) {
+    @if $active {
+        &:hover,
+        &:active,
+        &:focus,
+        &.active {
+            @content;
+        }
+    } @else {
+        &:hover,
+        &:active,
+        &:focus {
+            @content;
+        }
+    }
+}
+
+
+// Author: gillesbertaux
+
+@mixin background-gradient($startcolor, $endcolor, $orientation) {
+    background: $startcolor;
+    @if $orientation == vertical {
+    // vertical
+      background: -moz-linear-gradient(top,  $startcolor 0%, $endcolor 100%);
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$startcolor), color-stop(100%,$endcolor));
+      background: -webkit-linear-gradient(top,  $startcolor 0%,$endcolor 100%);
+      background: -o-linear-gradient(top,  $startcolor 0%,$endcolor 100%);
+      background: -ms-linear-gradient(top,  $startcolor 0%,$endcolor 100%);
+      background: linear-gradient(to bottom,  $startcolor 0%,$endcolor 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$startcolor', endColorstr='$endcolor',GradientType=0 );
+    }
+    @else if $orientation == horizontal
+    {
+    // horizontal
+      background: -moz-linear-gradient(left,  $startcolor 0%, $endcolor 100%);
+      background: -webkit-gradient(linear, left top, right top, color-stop(0%,$startcolor), color-stop(100%,$endcolor));
+      background: -webkit-linear-gradient(left,  $startcolor 0%,$endcolor 100%);
+      background: -o-linear-gradient(left,  $startcolor 0%,$endcolor 100%);
+      background: -ms-linear-gradient(left,  $startcolor 0%,$endcolor 100%);
+      background: linear-gradient(to right,  $startcolor 0%,$endcolor 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$startcolor', endColorstr='$endcolor',GradientType=1 );
+    }
+    @else
+    {
+    // radial
+      background: -moz-radial-gradient(center, ellipse cover,  $startcolor 0%, $endcolor 100%);
+      background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,$startcolor), color-stop(100%,$endcolor));
+      background: -webkit-radial-gradient(center, ellipse cover,  $startcolor 0%,$endcolor 100%);
+      background: -o-radial-gradient(center, ellipse cover,  $startcolor 0%,$endcolor 100%);
+      background: -ms-radial-gradient(center, ellipse cover,  $startcolor 0%,$endcolor 100%);
+      background: radial-gradient(ellipse at center,  $startcolor 0%,$endcolor 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$startcolor', endColorstr='$endcolor',GradientType=1 );
+    }
+}
+
+@mixin center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@mixin absolute-center($legacy:false, $width: 0, $height: 0) {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  @if $legacy {
+    margin-left: ($width / 2) * -1px;
+    margin-top: ($height / 2) * -1px;
+  } @else {
+    -webkit-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+  }
+}
+
+@mixin absolute($args) {
+  $top: nth($args, 1);
+  $right: nth($args, 2);
+  $bottom: nth($args, 3);
+  $left: nth($args, 4);
+  
+  position: absolute;
+  @if $top { @include rem-space(top, $top); };
+  @if $right { @include rem-space(right, $right); };
+  @if $bottom { @include rem-space(bottom, $bottom); };
+  @if $left { @include rem-space(left, $left); };
+}
+
+// Transform mixins
+
+@mixin rotate($value) {
+  @include vendor(transform, rotate($value));
+}
+@mixin rotate3d($value) {
+  @include vendor(transform, rotate3d($value));
+}
+@mixin scale($value) {
+  @include vendor(transform, scale($value));
+}
+@mixin scale3d($value) {
+  @include vendor(transform, scale3d($value));
+}
+@mixin translate($value) {
+  @include vendor(transform, translate($value));
+}
+@mixin translate3d($value) {
+  @include vendor(transform, translate3d($value));
+}
+@mixin translateX($value) {
+  @include vendor(transform, translateX($value));
+}
+@mixin translateY($value) {
+  @include vendor(transform, translateY($value));
+}
+@mixin translateZ($value) {
+  @include vendor(transform, translateZ($value));
+}
+@mixin perspective($value) {
+  @include vendor(transform, perspective($value));
+}
+
+
+
+
