--- a/functions/_utils.scss
+++ b/functions/_utils.scss
@@ -1,3 +1,18 @@
 @function strip-units($number) {
   @return $number / ($number * 0 + 1);
 }
+
+@function getcolor($scheme, $tone: base) {
+	@if type-of(map-get($colors, $scheme)) == 'map' {
+		@if not map-has-key(map-get($colors, $scheme), $tone) {
+		    @warn "Key `#{$tone}` not found in $colors map.";
+		}
+	    @return map-get(map-get($colors, $scheme), $tone);
+	} @else {
+	    @return map-get($colors, $scheme);
+	}
+}
+
+@function getface($type: brand) {
+	@return map-get($faces, $type);
+}
