--- a/nicecss.scss
+++ b/nicecss.scss
@@ -4,11 +4,13 @@ IMPORTS
 ------------------------------------------------
 */
 
+@import "functions/utils";
+@import "functions/metrics";
 
 @import "defaults";
 
-@import "functions/utils";
-@import "functions/metrics";
+@import 'breakpoint-sass/stylesheets/breakpoint';
+@import 'sass-flex-mixin/flex';
 
 @import "base/mixins";
 @import "base/reset";
@@ -25,3 +27,4 @@ IMPORTS
 @import "objects/tabdata";
 @import "objects/media";
 @import "objects/loader";
+@import "objects/dropmenu";
