--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -4,15 +4,15 @@ GRIDS
 ------------------------------------------------
 */
 
-*,
-*:after,
-*:before {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box
-}
+// *,
+// *:after,
+// *:before {
+//   margin: 0;
+//   padding: 0;
+//   -webkit-box-sizing: border-box;
+//      -moz-box-sizing: border-box;
+//           box-sizing: border-box
+// }
 
 ////////// FIXED GUTTER GRID ///////////////
 
@@ -81,53 +81,4 @@ GRIDS
   $total-columns: nth($span, 3);
   $size: nth($span, 1);
   right: (100 / ($total-columns / $size)) * 1%;
-}
-
-
-////////// FLUID GUTTER GRID ///////////////
-
-@mixin fgrid() {
-  list-style:none;
-  margin: 0;
-  padding: 0;
-
-  &:after{
-    content: "";
-    display: table;
-    clear: both
-  }
-
-  & > * {
-    margin-right: gutter-fix-to-percent($gutter);
-    float: left;
-    width: 100%;
-    &:last-child {
-      margin-right: 0;
-    }
-  }
-
-  @include respond-to(nth(nth($breakpoints,1),1)){
-    & > * {
-      width: 100% !important;
-    }
-  }
-}
-
-@mixin fcell ($span) {
-  $total-columns: nth($span, 3);
-  $size: nth($span, 1);
-  $remaining-width: 100% - gutter-fix-to-percent($gutter) * ($total-columns - 1);
-  width: #{(($remaining-width / $total-columns) * $size) + ($size - 1) * gutter-fix-to-percent($gutter)} !important;
-}
-
-@mixin fgrid-cover($index:auto) {
-  @if $index == auto {
-    &:last-child {
-      margin-right: 0;
-    }
-  } @else {
-    &:nth-child(#{$index}) {
-      margin-right: 0;
-    }
-  }
 }
