add include controls

--- a/_defaults.scss
+++ b/_defaults.scss
@@ -167,3 +167,5 @@ $use-lists: 		true !default;
 $use-texts: 		true !default;
 $use-loader: 		true !default;
 $use-dropmenu: 		true !default;
+$use-stackmenu:		true !default;
+$use-tabtada:		true !default;
