Added color helpers

--- a/_defaults.scss
+++ b/_defaults.scss
@@ -168,4 +168,4 @@ $use-texts: 		true !default;
 $use-loader: 		true !default;
 $use-dropmenu: 		true !default;
 $use-stackmenu:		true !default;
-$use-tabtada:		true !default;
+$use-tabdata:		true !default;
