--- a/base/_helpers.scss
+++ b/base/_helpers.scss
@@ -80,6 +80,27 @@ HELPERS
 		}
 	}
 
+	// COLORS -----------------------------------------------
+	@each $name, $value in $colors {
+		@if type-of($value) == map {
+			@each $nametone, $valuetone in $value {
+				.color--#{$name}#{$nametone} {
+					color: $valuetone;
+				}
+				.bgcolor--#{$name}#{$nametone} {
+					background-color: $valuetone;
+				}
+			}
+		} @else {
+			.color--#{$name} {
+				color: $value;
+			}
+			.bgcolor--#{$name} {
+				background-color: $value;
+			}
+		}
+	}
+
 	// CLEARFIX     ---------------------------------------
 	.clearfix {
 		@include clearfix;
