Added calc grid system

--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -4,81 +4,52 @@ GRIDS
 ------------------------------------------------
 */
 
-// *,
-// *:after,
-// *:before {
-//   margin: 0;
-//   padding: 0;
-//   -webkit-box-sizing: border-box;
-//      -moz-box-sizing: border-box;
-//           box-sizing: border-box
-// }
-
-////////// FIXED GUTTER GRID ///////////////
-
- @mixin grid ($wide:normal){
-    list-style:none;
-    margin: 0;
-    padding: 0;
-    margin-left: -$gutter;
-    &:after{
-      content: "";
-      display: table;
-      clear: both
-    }
-    & > * {
-      padding-left: $gutter;
-      float: left;
-      width: 100%;
-    }
-    @include respond-to(nth(nth($breakpoints,1),1)){
-      margin-left: 0;
-      & > * {
-        padding-left: 0;
-        width: 100% !important;
-      }
-    }
-    @if $wide == full {
-      margin-left: 0;
-      & > * {
-        padding-left: 0;
-      }
-    }
-    @else if $wide == wide {
-      margin-left: $gutter * -2;
-      & > * {
-        padding-left: $gutter * 2;
-      } 
-    }
-    @else if $wide == narrow {
-      margin-left: -($gutter / 2);
-      & > * {
-        padding-left: $gutter / 2;
-      }
-    }
- }
-
-
-/**
- * example @include cell(6 of 12);
- */
-
-@mixin cell ($span) {
-  $total-columns: nth($span, 3);
-  $size: nth($span, 1);
-  width: #{100 / ($total-columns / $size)}% !important;
+@function fill-span($span) {
+  $result: ();
+  @if type-of($span) == list and length($span) == 3 {
+    $result: $span;
+  } @else {
+    $result: append($result, $span);
+    $result: append($result, of);
+    $result: append($result, map-get($grid-settings, columns));
+  }
+  @return $result;
+  
+}
+@mixin grid {
+  $gutter: map-get($grid-settings, gutter);
+  @include clearfix;
+  margin: 0;
+  padding: 0;
+  margin-left: -#{$gutter};
+  & > * {
+    float: left;
+    width: 100%;
+    margin-left: $gutter;
+  }
 }
 
-@mixin push-cell ($span) {
-  position: relative;
+@mixin cell($span) {
+  $span: fill-span($span);
   $total-columns: nth($span, 3);
   $size: nth($span, 1);
+  $width: (100 / ($total-columns / $size)) * 1%;
+  $gutter: map-get($grid-settings, gutter);
+  width: calc(#{$width} - #{$gutter});
+}
+
+@mixin push-cell($span) {
+  $span: fill-span($span);
+  $total-columns: nth($span, 3);
+  $size: nth($span, 1);
+  position: relative;
   left: (100 / ($total-columns / $size)) * 1%;
 }
-
-@mixin pull-cell ($span) {
-  position: relative;
+@mixin pull-cell($span) {
+  $span: fill-span($span);
   $total-columns: nth($span, 3);
   $size: nth($span, 1);
-  right: (100 / ($total-columns / $size)) * 1%;
+  position: relative;
+  left: (100 / ($total-columns / $size)) * -1%;
 }
+
