Fixed textsize helper, moved mixins to utils folder

--- a/base/_helpers.scss
+++ b/base/_helpers.scss
@@ -30,13 +30,6 @@ HELPERS
 	.weight--semibold   	{ font-weight:600!important; }
 	.weight--bold   		{ font-weight:700!important; }
 
-	// TEXT SIZE --------------------------------------
-	.textsize--normal 		{ font-size: 100%; }
-	.textsize--small 		{ font-size: 75%; }
-	.textsize--smaller		{ font-size: 50%; }
-	.textsize--big			{ font-size: 150%; }
-	.textsize--biger		{ font-size: 200%; }
-
 
 	// FONT STYLED   --------------------------------
 	.text--unitalic 	{ font-style: normal!important; }
@@ -117,7 +110,7 @@ HELPERS
 
 	// SIZES -----------------------------------------------
 	@each $name, $value in $sizes {
-		.size--#{$name} {
+		.textsize--#{$name} {
 			@include font-size($value, false);
 		}
 	}
