Added when-inside mixin

--- a/utils/_utilities.scss
+++ b/utils/_utilities.scss
@@ -62,3 +62,10 @@ UTILITIES
         }
     }
 }
+
+// From <http://sass-guidelin.es/>
+@mixin when-inside($selector) {
+  #{$selector} & {
+    @content;
+  }
+}
