--- a/utils/_layout.scss
+++ b/utils/_layout.scss
@@ -66,6 +66,14 @@ LAYOUT UTILITIES
   }
 }
 
+@mixin coverer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @mixin absolute($args) {
   $top: nth($args, 1);
   $right: nth($args, 2);
