Add assets functions

--- a/_defaults.scss
+++ b/_defaults.scss
@@ -16,6 +16,18 @@ $line-height-ratio: $base-line-height / $base-font-size !default;
 
 /* 
 ------------------------------------------------
+PATHS
+------------------------------------------------
+*/
+
+$paths: (
+	base: '../assets',
+	fonts: 'fonts',
+	images: 'images'
+)!default;
+
+/* 
+------------------------------------------------
 COLORS
 ------------------------------------------------
 */
